[tool.poetry]
name = "searchgpt"
version = "0.1.0"
description = ""
authors = ["Kamil Hryniewicz <kamil.hryniewicz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
gradio = "^3.28.3"
python = "^3.11"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"

[tool.pylint.messages_control]
disable = ["missing-docstring"]
max-line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
