[tool.poetry]
name = "searchgpt"
version = "0.1.0"
description = ""
authors = ["Kamil Hryniewicz <kamil.hryniewicz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
google-search-results = "^2.4.2"
gradio = "^3.28.3"
langchain = "^0.0.161"
openai = "^0.27.6"
python = "^3.11"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"
tqdm = "^4.65.0"
wget = "^3.2"

[tool.pylint.messages_control]
disable = ["missing-docstring"]
max-line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
