[tool.poetry]
name = "searchgpt"
version = "0.1.0"
description = ""
authors = ["Kamil Hryniewicz <kamil.hryniewicz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
google-search-results = "^2.4.2"
gradio = "^3.40.1"
langchain = "^0.0.263"
pinecone-client = "^2.2.2"
python = "^3.11"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pylint = "^2.17.5"
tqdm = "^4.66.1"
wget = "^3.2"

[tool.pylint.messages_control]
disable = ["missing-docstring"]
max-line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
